--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -59,10 +59,9 @@ jobs:
   deploy-docker-image-to-ec2:
     name: Deploy to EC2
     if: always()
-    uses: fifsky/ssh-action@master
     with:
       command: |
-        docker pull "$REGISTRY_URL:$BUILD_TAG" & docker run -d --name ${JOB_BASE_NAME} -p $SERVICE_PORT:$SERVICE_PORT $REGISTRY_URL:$BUILD_TAG
+        docker pull ${{ secrets.DOCKER_REPO }} & docker run -d --name kartike ${{ secrets.DOCKER_REPO }}
       host: ${{ secrets.HOST }}
       user: ${{ secrets.SSH_USER }}
       key: ${{ secrets.SSH_KEY }}
