--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -58,12 +58,11 @@ jobs:
 
   deploy-docker-image-to-ec2:
     steps:
+      - uses: actions/checkout@v2
       - name: Deploy to EC2
-        if: always()
-          with:
-            command: |
-              docker pull ${{ secrets.DOCKER_REPO }} & docker run -d --name kartike ${{ secrets.DOCKER_REPO }}
-            host: ${{ secrets.HOST }}
-            user: ${{ secrets.SSH_USER }}
-            key: ${{ secrets.SSH_KEY }}
-            args: "-tt"
+        run: |
+          docker pull ${{ secrets.DOCKER_REPO }} & docker run -d --name kartike ${{ secrets.DOCKER_REPO }}
+          host: ${{ secrets.HOST }}
+          user: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          args: "-tt"
