--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -66,4 +66,4 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: docker pull ${{ secrets.DOCKER_REPO }} & docker run -d --name kartike ${{ secrets.DOCKER_REPO }}
+          run: docker pull ${{ secrets.DOCKER_REPO }} & docker run -d --name kartike ${{ secrets.DOCKER_REPO }}
