--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -60,8 +60,8 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: ./
       - name: Deploy to EC2
+        uses: ./
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
