--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -59,6 +59,7 @@ jobs:
   deploy-docker-image-to-ec2:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: [build-docker-image]
     steps:
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
@@ -66,5 +67,5 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: ls -l
+          script: touch abc && ls -l
 
