--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -67,5 +67,5 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: touch abc && ls -l
+          script: docker pull ${{ secrets.DOCKER_REPO }} & docker run -d --name kartike  ${{ secrets.DOCKER_REPO }}
 
