--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -89,7 +89,7 @@ jobs:
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: {{ secrets.REPONAME }}
+          ECR_REPOSITORY: ${{ secrets.REPONAME }}
           IMAGE_TAG: 1.0
         run: |
           # Build a docker container and push it to ECR
