--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -73,8 +73,9 @@ jobs:
   push-docker-image-to-ecr:
     name: pushtoecr
     runs-on: ubuntu-latest
+    needs: [build-docker-image]
     steps:
-      - name: Deploy to EC2
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
