--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -75,6 +75,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-docker-image]
     steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+        
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
