--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -77,7 +77,7 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-        
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -102,4 +102,29 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
+  push-docker-image-to-jfrog:
+    name: pushtojfrog
+    runs-on: ubuntu-latest
+    needs: [build-docker-image]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to JFrog
+        uses: docker/login-action@v1
+        with:
+          registry: https://artifactory.beta.ibdp.calibo.com
+          username: ${{ secrets.JFROG_USER_WRITER }}
+          password: ${{ secrets.JFROG_PASSWORD_WRITER }}
+       - name: Build and push
+         id: docker_build
+         uses: docker/build-push-action@v2
+         with:
+           push: true
+           tags: https://artifactory.beta.ibdp.calibo.com/<your image name>:latest
