--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -107,7 +107,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-docker-image]
     steps:
-      - name: Checkout
+      - name: Check out code
         uses: actions/checkout@v2
 
       - name: Set up QEMU
