--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -127,4 +127,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: https://artifactory.beta.ibdp.calibo.com/<your image name>:latest
+          tags: https://artifactory.beta.ibdp.calibo.com/1.0:latest
