--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -119,7 +119,7 @@ jobs:
       - name: Login to JFrog
         uses: docker/login-action@v1
         with:
-          registry: https://artifactory.beta.ibdp.calibo.com/artifactory/newprojectteam/
+          registry: artifactory.beta.ibdp.calibo.com/newprojectteam/f/
           username: ${{ secrets.JFROG_USER_WRITER }}
           password: ${{ secrets.JFROG_PASSWORD_WRITER }}
       - name: Build and push
