--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -103,7 +103,7 @@ jobs:
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
   push-docker-image-to-jfrog:
-    name: pushtojfrog
+    name: pushingtojfrog
     runs-on: ubuntu-latest
     needs: [build-docker-image]
     steps:
