--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -49,12 +49,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Login to Docker Hub
-        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to jfrog artifact
+        run:  docker login ${{ secrets.IMAGE_HOST_NAME }} -u ${{ secrets.IMAGE_USER_WRITER }} -p ${{ secrets.IMAGE_PASSWORD_WRITER }}
       - name: Build Container image
-        run: docker build -t ${{ secrets.DOCKER_REPO }}:latest .
+        run: docker build -t ${{ secrets.IMAGE_NAME }}:latest .
+      - name: Apply tag command
+        run:  docker tag -t ${{ secrets.IMAGE_NAME }}:latest  ${{ secrets.IMAGE_HOST_NAME }}   ${{ secrets.IMAGE_REPO_NAME }}  ${{ secrets.IMAGE_NAME }}:latest
       - name: Publish Docker image
-        run: docker push ${{ secrets.DOCKER_REPO }}
+        run:  docker push  ${{ secrets.IMAGE_HOST_NAME }}   ${{ secrets.IMAGE_REPO_NAME }}  ${{ secrets.IMAGE_NAME }}:latest
 
   deploy-docker-image-to-ec2:
     name: Deploy
