--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -43,7 +43,7 @@ jobs:
             path: staging
   
   build-docker-image:
-    name: Publish to Docker Hub
+    name: Publish image
     runs-on: ubuntu-latest
     needs: [build_and_test]
 
@@ -55,8 +55,10 @@ jobs:
         run: docker build -t ${{ secrets.IMAGE_NAME }}:latest .
       - name: Apply tag command
         run:  docker tag -t ${{ secrets.IMAGE_NAME }}:latest  ${{ secrets.IMAGE_HOST_NAME }}   ${{ secrets.IMAGE_REPO_NAME }}  ${{ secrets.IMAGE_NAME }}:latest
+      - name: Exporting
+        run: export FULL_IMAGE_NAME = ${{ secrets.IMAGE_HOST_NAME }}${{ secrets.IMAGE_REPO_NAME }}${{ secrets.IMAGE_NAME }}:latest
       - name: Publish Docker image
-        run:  docker push  ${{ secrets.IMAGE_HOST_NAME }}   ${{ secrets.IMAGE_REPO_NAME }}  ${{ secrets.IMAGE_NAME }}:latest
+        run:  docker push $FULL_IMAGE_NAME
 
   deploy-docker-image-to-ec2:
     name: Deploy
