--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Build Container image
         run:  docker build -t ${{ secrets.IMAGE_NAME }}:latest .
       - name: Exporting
-        run:  export FULL_IMAGE_NAME = ${{ secrets.IMAGE_HOST_NAME }}${{ secrets.IMAGE_REPO_NAME }}${{ secrets.IMAGE_NAME }}:latest
+        run:  export FULL_IMAGE_NAME  ${{ secrets.IMAGE_HOST_NAME }}${{ secrets.IMAGE_REPO_NAME }}${{ secrets.IMAGE_NAME }}:latest
       - name: Apply tag command
         run:  docker tag ${{ secrets.IMAGE_NAME }}:latest $FULL_IMAGE_NAME
       - name: Publish Docker image
