--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Login to jfrog artifact
         run:  docker login ${{ secrets.IMAGE_HOST_NAME }} -u ${{ secrets.IMAGE_USER_WRITER }} -p ${{ secrets.IMAGE_PASSWORD_WRITER }}
       - name: Build Container image
-        run:  docker build -t ${{ secrets.IMAGE_NAME }}:latest .
+        run:  docker build -t ${{ secrets.IMAGE_HOST_NAME }}${{ secrets.IMAGE_REPO_NAME }}${{ secrets.IMAGE_NAME }}:latest .
       - name: Apply tag command
         run:  docker tag ${{ secrets.IMAGE_NAME }}:latest ${{ secrets.IMAGE_HOST_NAME }}${{ secrets.IMAGE_REPO_NAME }}${{ secrets.IMAGE_NAME }}:latest
       - name: Publish Docker image
