--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -58,7 +58,9 @@ jobs:
       - name:  Apply tag command
         env:
             FULL_IMAGE_NAME : '${{ secrets.IMAGE_HOST_NAME }}:${{ secrets.IMAGE_REPO_NAME }}:${{ secrets.IMAGE_NAME }}:latest'
-        run:  docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/imagetemp:latest
+       # run:  docker tag imagetemp:latest  artifactory.beta.ibdp.calibo.com/newprojectteam/f/imagetemp:0.1
+       # run:  docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/imagetemp:latest
+        run:  docker push imagetemp:latest
 
   deploy-docker-image-to-ec2:
     name: Deploy
