--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -52,15 +52,13 @@ jobs:
       - name: Login to jfrog artifact
         run:  docker login ${{ secrets.IMAGE_HOST_NAME }} -u ${{ secrets.IMAGE_USER_WRITER }} -p ${{ secrets.IMAGE_PASSWORD_WRITER }}
       - name: Build Container image
-        run:  docker build -t ${{ secrets.IMAGE_HOST_NAME }}/${{ secrets.IMAGE_NAME }}:latest .
+        run:  docker build -t artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest .
       - name: Test by printing values
         run: echo " Print ${{secrets.IMAGE_HOST_NAME}}:${{secrets.IMAGE_REPO_NAME }}:${{ secrets.IMAGE_NAME }}:latest"
       - name:  Apply tag command
-        env:
-            FULL_IMAGE_NAME : '${{ secrets.IMAGE_HOST_NAME }}:${{ secrets.IMAGE_REPO_NAME }}:${{ secrets.IMAGE_NAME }}:latest'
        # run:  docker tag imagetemp:latest  artifactory.beta.ibdp.calibo.com/newprojectteam/f/imagetemp:0.1
        # run:  docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/imagetemp:latest
-        run: docker login ${{ secrets.IMAGE_HOST_NAME }} -u ${{ secrets.IMAGE_USER_WRITER }} -p ${{ secrets.IMAGE_PASSWORD_WRITER }}; docker push ${{ secrets.IMAGE_HOST_NAME }}/${{ secrets.IMAGE_NAME }}:latest
+        run: docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
   deploy-docker-image-to-ec2:
     name: Deploy
