--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -61,7 +61,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: docker pull artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest & docker run -d --name kartike  artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
+          script: docker pull artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest & docker run -d --name kartikenew  artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
 
   deploy-docker-image-to-ec2:
