--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -61,78 +61,86 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.SSH_USER }}
           key: ${{ secrets.SSH_KEY }}
-          script: docker pull artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest & docker run -d --name kartikenew  artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
-
-
-  deploy-docker-image-to-ec2:
-    name: Deploy
-    runs-on: ubuntu-latest
-    needs: [build-docker-image]
-    steps:
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.SSH_USER }}
-          key: ${{ secrets.SSH_KEY }}
-          script: docker pull ${{ secrets.DOCKER_REPO }} & docker run -d --name kartike  ${{ secrets.DOCKER_REPO }}
-
-
-  push-docker-image-to-ecr:
-    name: pushtoecr
-    runs-on: ubuntu-latest
-    needs: [build-docker-image]
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-
+          script: docker pull artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest & docker run -d --name kartikenew2  artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
-
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-
       - name: Build, tag, and push the image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.REPONAME }}
-          IMAGE_TAG: 1.0
+#          IMAGE_TAG: 1.0
         run: |
           # Build a docker container and push it to ECR
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "Pushing image to ECR..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
-  push-docker-image-to-jfrog:
-    name: pushingtojfrog
-    runs-on: ubuntu-latest
-    needs: [build-docker-image]
-    steps:
-      - name: Check out code
-        uses: actions/checkout@v2
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+#  push-docker-image-to-ecr:
+#    name: pushtoecr
+#    runs-on: ubuntu-latest
+#    needs: [build-docker-image]
+#    steps:
+#      - name: Check out code
+#        uses: actions/checkout@v2
+#
+#      - name: Configure AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: us-east-1
+#
+#      - name: Login to Amazon ECR
+#        id: login-ecr
+#        uses: aws-actions/amazon-ecr-login@v1
+#
+#      - name: Build, tag, and push the image to Amazon ECR
+#        id: build-image
+#        env:
+#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#          ECR_REPOSITORY: ${{ secrets.REPONAME }}
+#          IMAGE_TAG: 1.0
+#        run: |
+#          # Build a docker container and push it to ECR
+#          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#          echo "Pushing image to ECR..."
+#          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+#          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-      - name: Login to JFrog
-        uses: docker/login-action@v1
-        with:
-          registry: artifactory.beta.ibdp.calibo.com/newprojectteam/f/
-          username: ${{ secrets.JFROG_USER_WRITER }}
-          password: ${{ secrets.JFROG_PASSWORD_WRITER }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: ${{ secrets.DOCKER_REPO }}:latest
+#  push-docker-image-to-jfrog:
+#    name: pushingtojfrog
+#    runs-on: ubuntu-latest
+#    needs: [build-docker-image]
+#    steps:
+#      - name: Check out code
+#        uses: actions/checkout@v2
+#
+#      - name: Set up QEMU
+#        uses: docker/setup-qemu-action@v1
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#
+#      - name: Login to JFrog
+#        uses: docker/login-action@v1
+#        with:
+#          registry: artifactory.beta.ibdp.calibo.com/newprojectteam/f/
+#          username: ${{ secrets.JFROG_USER_WRITER }}
+#          password: ${{ secrets.JFROG_PASSWORD_WRITER }}
+#      - name: Build and push
+#        id: docker_build
+#        uses: docker/build-push-action@v2
+#        with:
+#          push: true
+#          tags: ${{ secrets.DOCKER_REPO }}:latest
