--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -4,11 +4,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+    types: [opened, edited, reopened, synchronize]
 
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 14
@@ -54,7 +54,7 @@ jobs:
       - name: Build Container image
         run:  docker build -t artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest .
       - name: Apply push command
-        run: docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
+        run:  docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
@@ -74,50 +74,74 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push the image to Amazon ECR
+      - name: Push the image to Amazon ECR
         id: build-image
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.REPONAME }}
-#          IMAGE_TAG: 1.0
         run: |
           # Build a docker container and push it to ECR
           echo "Pushing image to ECR..."
           docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
-
-
   push-docker-image-to-ecr:
-    name: pushtoecr
+    name: sonar gate
     runs-on: ubuntu-latest
-    needs: [build-docker-image]
+    needs: [build_and_test]
     steps:
-      - name: Check out code
+      - name: Setup sonarqube
+        uses: warchant/setup-sonar-scanner@v1
+
+      - name: 'Checkout repository on branch: master'
         uses: actions/checkout@v2
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          ref: master  #${{ github.REF }}'
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Build, tag, and push the image to Amazon ECR
-        id: build-image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.REPONAME }}
-          IMAGE_TAG: 1.0
+      - name: Retrieve entire repository history
         run: |
-          # Build a docker container and push it to ECR
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          echo "Pushing image to ECR..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          git fetch --prune --unshallow
+      - name: Run an analysis of the PR
+        env:
+          # To get access to secrets.SONAR_TOKEN, provide GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: sonar-scanner
+          -Dsonar.host.url=${{ secrets.SONARQUBE_HOST }}
+          -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
+          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+          -Dsonar.branch.name=master
+          -Dsonar.scm.provider=git
+
+#  push-docker-image-to-ecr:
+#    name: pushtoecr
+#    runs-on: ubuntu-latest
+#    needs: [build-docker-image]
+#    steps:
+#      - name: Check out code
+#        uses: actions/checkout@v2
+#
+#      - name: Configure AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: us-east-1
+#
+#      - name: Login to Amazon ECR
+#        id: login-ecr
+#        uses: aws-actions/amazon-ecr-login@v1
+#
+#      - name: Build, tag, and push the image to Amazon ECR
+#        id: build-image
+#        env:
+#          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#          ECR_REPOSITORY: ${{ secrets.REPONAME }}
+#          IMAGE_TAG: 1.0
+#        run: |
+#          # Build a docker container and push it to ECR
+#          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+#          echo "Pushing image to ECR..."
+#          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+#          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
 #  push-docker-image-to-jfrog:
 #    name: pushingtojfrog
