--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -84,7 +84,7 @@ jobs:
           echo "Pushing image to ECR..."
           docker push artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
-  push-docker-image-to-ecr:
+  sonar_gate:
     name: sonar gate
     runs-on: ubuntu-latest
     needs: [build_and_test]
@@ -111,6 +111,53 @@ jobs:
           -Dsonar.projectKey=abc
           -Dsonar.scm.provider=git
           -Dsonar.java.binaries=/tmp
+
+  deploy_to_kuber_cluster:
+    name: deploy to cluster
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: deploy to cluster
+        uses: kodermax/kubectl-aws-eks@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ secrets.REPONAME }}
+         # IMAGE_TAG: ${{ github.sha }}
+        with:
+          args: set image deployment/$ECR_REPOSITORY $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+      - name: verify deployment
+        uses: kodermax/kubectl-aws-eks@master
+        env:
+          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
+        with:
+          args: rollout status deployment/my-app
+
+
+
+
+
+
+
+
+
+
+
+
 
 #  push-docker-image-to-ecr:
 #    name: pushtoecr
