--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -140,7 +140,7 @@ jobs:
         with:
           args: set image artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
-      - name: verify deployment
+      - name: verify deployment.
         uses: kodermax/kubectl-aws-eks@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
