--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -126,21 +126,20 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-#      - name: Login to Amazon ECR
-#        id: login-ecr
-#        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: deploy to kubernetes cluster
+      - name: Deploy to kubernetes cluster
         uses: kodermax/kubectl-aws-eks@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
-         # ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-         # ECR_REPOSITORY: ${{ secrets.REPONAME }}
-         # IMAGE_TAG: ${{ github.sha }}
         with:
           args: set image artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
+         # set image deployment/my-pod app=${{ env.RELEASE_IMAGE }} --record -n $KUBE_NAMESPACE
+         # set image deployment/kartike_deployment -n=<<namespace>>
+         #<<container_name>>=<<your_dockerhub_username>>/artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
+         # set image --record deployment/my-app container=${{ github.repository }}:${{ github.sha }}
 
-      - name: verify deployment.
+
+
+      - name: Verify deployment.
         uses: kodermax/kubectl-aws-eks@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
