--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -43,7 +43,7 @@ jobs:
             path: staging
   
   build-docker-image:
-    name: Publish image
+    name: Publish image into jfrog, ec2 deployment and ecr
     runs-on: ubuntu-latest
     needs: [build_and_test]
 
