--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -138,7 +138,7 @@ jobs:
 #          ECR_REPOSITORY: kartike
           IMAGE_TAG: latest
         with:
-         entryPoint: kubectl run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
+         args: kubectl run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
             #args: set image deployment/$ECR_REPOSITORY $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
            #kubectl run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
