--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -136,9 +136,9 @@ jobs:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA_STAGING }}
 #          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
 #          ECR_REPOSITORY: kartike
-          IMAGE_TAG: latest
+        #  IMAGE_TAG: latest
         with:
-         args: kubectl run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
+         args: run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
             #args: set image deployment/$ECR_REPOSITORY $ECR_REPOSITORY=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
            #kubectl run test --image=artifactory.beta.ibdp.calibo.com/newprojectteam/f/temp:latest
 
