--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -138,7 +138,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Prep helm chart
-      - uses: actions/checkout@v1
+        uses: actions/checkout@v1
         run: |
           mv ./.helm/app/Chart.yaml ./.helm/app/Chart.old.yaml &&
           cat ./.helm/app/Chart.old.yaml | grep -v appVersion > ./.helm/app/Chart.yaml &&
