--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -137,8 +137,8 @@ jobs:
     name: deploy to cluster using helm
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Prep helm chart
-        uses: actions/checkout@v1
         run: |
           mv ./.helm/app/Chart.yaml ./.helm/app/Chart.old.yaml &&
           cat ./.helm/app/Chart.old.yaml | grep -v appVersion > ./.helm/app/Chart.yaml &&
