--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -140,13 +140,14 @@ jobs:
       - uses: actions/checkout@v1
       - name: Prep helm chart
         run: |
-          mv ./.helm/application/Chart.yaml ./.helm/application/Chart.old.yaml &&
-          cat ./.helm/app/Chart.old.yaml | grep -v appVersion > ./.helm/app/Chart.yaml &&
-          echo -e "\r\nappVersion: v${GITHUB_REF##*/}\r\n" >> ./.helm/app/Chart.yaml &&
-          cat ./.helm/app/Chart.yaml
+#          mv ./.helm/app/Chart.yaml ./.helm/app/Chart.old.yaml &&
+#          cat ./.helm/app/Chart.old.yaml | grep -v appVersion > ./.helm/app/Chart.yaml &&
+#          echo -e "\r\nappVersion: v${GITHUB_REF##*/}\r\n" >> ./.helm/app/Chart.yaml &&
+#          cat ./.helm/app/Chart.yaml
           rm -rf kube
           mkdir -p kube
-          cp "$KUBECONFIG" kube
+         # cp "$KUBECONFIG" kube
+          cp  ${{ secrets.KUBE_CONFIG_DATA_STAGING }} kube
           sed -i s+#SERVICE_NAME#+"$service"+g ./helm_chart/values.yaml ./helm_chart/Chart.yaml
           kubectl create ns kartike_namespace || true
           pwd
